--- a/public/artifacts.css
+++ b/public/artifacts.css
@@ -10,15 +10,26 @@
 }
 header{
   background: inherit;
-  position: sticky;
+  position: fixed;
+  display: block;
+  width: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  text-align: center;
+  font-size: 160%;
+  box-shadow: 0 4px 28px rgba(0,0,0,.50);
+  height: 5%;
+  z-index: 1;
 }
 body{
   overflow-x: hidden;
 }
   .artifact{
+    position: relative;
     align-items: center;
     justify-content: center;
-    margin: 3% 2% 0 2%;
+    margin: 7%  6% 2% 2%;
     display: block;
     width: 100%;
     height: 100%;
@@ -59,6 +70,7 @@ body{
   background-size: cover;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.25);
   border-radius: 10px;
+  max-width: 380px;
   background-position: center;
   -webkit-transition: -webkit-transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
   transition: -webkit-transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
@@ -70,7 +82,6 @@ body{
   text-align: center;
   min-height: 280px;
   box-shadow: 0 0 10px solid blue;
-
   height: auto;
   border-radius: 10px;
   color: #fff;
@@ -483,12 +494,7 @@ body.hide{
   transform: rotate(45deg);
   background-color: #F25C66;
 }
-header {
-  background-color: #333;
-  color: #fff;
-  padding: 20px 0;
-  font-size: 25px;
-}
+
 body {
 	background: linear-gradient(-45deg, red, blue, green,yellow);
 	background-size: 400% 400%;
