--- a/public/contact.css
+++ b/public/contact.css
@@ -17,7 +17,20 @@ h1 {
 footer{
   position: fixed;
 }
-
+header{
+  background: inherit;
+  position: fixed;
+  display: block;
+  width: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  padding: 1.2%;
+  font-size: 180%;
+  box-shadow: 0 4px 28px rgba(0,0,0,.50);
+  height: 7%;
+  z-index: 1;
+}
 .contact-section {
     display: flex;
     justify-content: space-around;
@@ -261,11 +274,6 @@ textarea:focus {
   100% {transform: translateY(-8rem) scale(0.3, 0.5);}
 }
 */
-header {
-  background-color: #333;
-  color: #fff;
-  padding: 20px 0;
-}
 body {
 	background: linear-gradient(-45deg, red, blue, green,yellow);
 	background-size: 400% 400%;
