--- a/public/style.css
+++ b/public/style.css
@@ -12,8 +12,37 @@ body {
 color: #4e5e72;
 font-family: monospace;
 padding-bottom: 6.74rem;
+overflow: scroll;
 }
-
+::-webkit-scrollbar {
+  width: 20px;
+}
+::-webkit-scrollbar-track {
+  background-color: rgba(0, 0, 0, 0.7);
+  width: 20px;
+}
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(-45deg, red, blue, green,yellow);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+  border-radius: 20vw;
+  border: 1vh solid transparent;
+  background-clip: content-box;
+}
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+::-webkit-scrollbar-thumb:hover {
+  background-image: linear-gradient( 135deg, #43CBFF 10%, #9708CC 100%);
+}
 h1 {
 font-size: 2rem;
 font-family: 'Dancing Script';
