--- a/public/artifacts.css
+++ b/public/artifacts.css
@@ -513,3 +513,11 @@ body {
 		background-position: 0% 50%;
 	}
 }
+@media only screen and (max-width: 600px) {
+  footer {
+    position:fixed;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+  }
+}
