--- a/public/aboutus.css
+++ b/public/aboutus.css
@@ -43,7 +43,7 @@ footer{
   .container-text{
     width: 80%;
     margin: 20px auto;
-    margin-top: 20%;
+    margin-top: 10%;
     overflow-x: hidden;
     background-color: #fff;
     padding: 20px;
@@ -82,6 +82,17 @@ body {
 		background-position: 0% 50%;
 	}
 }
-
+@media screen and (max-width: 600px) {
+  .container-text{
+    width: 80%;
+    margin: 20px auto;
+    margin-top: 25%;
+    overflow-x: hidden;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+}
 
 
