--- a/public/aboutus.css
+++ b/public/aboutus.css
@@ -1,9 +1,7 @@
 body,html{
     overflow: hidden;
 }
-footer{
-    position:fixed;
-    }
+
 .profile-container {
     display: flex;
     flex-wrap: wrap;
@@ -43,7 +41,7 @@ footer{
   .container-text{
     width: 80%;
     margin: 20px auto;
-    margin-top: 10%;
+    margin-top: 7%;
     overflow-x: hidden;
     background-color: #fff;
     padding: 20px;
@@ -68,6 +66,7 @@ body {
 	background: linear-gradient(-45deg, red, blue, green,yellow);
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
+  overflow-y: auto;
 	height: 100vh;
 }
 
@@ -82,7 +81,7 @@ body {
 		background-position: 0% 50%;
 	}
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 800px) {
   .container-text{
     width: 80%;
     margin: 20px auto;
@@ -94,5 +93,3 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
 }
-
-
