--- a/public/artifacts.css
+++ b/public/artifacts.css
@@ -29,7 +29,7 @@ body{
     position: relative;
     align-items: center;
     justify-content: center;
-    margin: 7%  6% 2% 2%;
+    margin: 7%  2% 2% 2%;
     display: block;
     width: 100%;
     height: 100%;
@@ -519,5 +519,10 @@ body {
     bottom: 0;
     width: 100%;
     text-align: center;
+  }
+}
+@media screen and (max-width: 840px) {
+  .artifact{
+    margin: 22%  2% 2% 2%;
   }
 }
