--- a/public/timeline.css
+++ b/public/timeline.css
@@ -5,8 +5,9 @@ html,body{
   height: auto;
 }
 footer{
-  position:fixed;
+  position:relative;
   bottom: 0 ;
+  margin-bottom: -1000px;
 }
 @font-face {
   font-family: 'ESL Legend';
@@ -65,6 +66,7 @@ img {
   margin-top: 0;
   text-align: center;
 }
+
 .ag-timeline_tagline {
   font-size: 40px;
   color: rgb(84, 89, 95);
@@ -75,6 +77,7 @@ img {
   background-position: 50% 50%;
   margin-top: 0;
   top:0;
+  text-align: center;
   background-size: cover;
   -webkit-background-clip: text;
   background-clip: text;
@@ -83,9 +86,15 @@ img {
   position: absolute;
   top: 2cm;
   left: 30%;
-  font-size: 80px;
+  font-size: 420%;
 }
-
+@media screen and (max-width: 900px) {
+  .ag-timeline_title{
+    text-align: left;
+    position: absolute;
+    left: 18%;
+  }
+}
 .ag-timeline_item {
   margin: 0 0 50px;
 
