--- a/public/artifacts.css
+++ b/public/artifacts.css
@@ -24,16 +24,19 @@ header{
 }
 body{
   overflow-x: hidden;
-}
   .artifact{
-    position: relative;
-    align-items: center;
-    justify-content: center;
-    margin: 7%  2% 2% 2%;
     display: block;
-    width: 100%;
-    height: 100%;
   }
+}
+.artifact{
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  margin: 7%  2% 2% 2%; 
+  display: block;
+  width: 100%;
+  height: 100%;
+}
 .cols {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -523,6 +526,6 @@ body {
 }
 @media screen and (max-width: 840px) {
   .artifact{
-    margin: 22%  2% 2% 2%;
+    margin: 21%  2% 2% 2%;
   }
 }
