--- a/public/index.css
+++ b/public/index.css
@@ -16,38 +16,15 @@ body {
 	font-weight: 300;
 	background-color: #111;
 	color: #444;
-	/* CSS pattern by Lea Verou:
-  http://lea.verou.me/css3patterns/#starry-night
-  */
-	background-image: radial-gradient(white, rgba(255, 255, 255, .2) 2px, transparent 40px), radial-gradient(white, rgba(255, 255, 255, .15) 1px, transparent 30px), radial-gradient(white, rgba(255, 255, 255, .1) 2px, transparent 40px), radial-gradient(rgba(255, 255, 255, .4), rgba(255, 255, 255, .1) 2px, transparent 30px);
-	background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px;
-	background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;
-}
-
-@import url(https://fonts.googleapis.com/css?family=Yellowtail|Merriweather:300italic,300);
-*,
-*:before,
-*:after {
-	box-sizing: border-box;
-}
-
-html {
-	font-size: 16px;
-	line-height: 1.6;
-}
-
-body {
-	font-family: 'Merriweather', serif;
-	font-size: 1rem;
-	font-weight: 300;
-	background-color: #111;
-	color: #444;
-	/* CSS pattern by Lea Verou:
-  http://lea.verou.me/css3patterns/#starry-night
-  */
-	background-image: radial-gradient(white, rgba(255, 255, 255, .2) 2px, transparent 40px), radial-gradient(white, rgba(255, 255, 255, .15) 1px, transparent 30px), radial-gradient(white, rgba(255, 255, 255, .1) 2px, transparent 40px), radial-gradient(rgba(255, 255, 255, .4), rgba(255, 255, 255, .1) 2px, transparent 30px);
-	background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px;
-	background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;
+	background:
+linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px,
+linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px,
+linear-gradient(27deg, #222 5px, transparent 5px) 0px 10px,
+linear-gradient(207deg, #222 5px, transparent 5px) 10px 5px,
+linear-gradient(90deg, #1b1b1b 10px, transparent 10px),
+linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%, transparent 50%, transparent 75%, #242424 75%, #242424);
+background-color: #131313;
+background-size: 20px 20px;
 }
 
 h1,
@@ -468,7 +445,9 @@ header nav ul li:hover a {
 }
 
 .page {
-    background-color: rgba(0, 0, 0, 0.2)
+    background-color: rgba(0, 0, 0, 0.2);
+	overflow-wrap: normal;
+	overflow: auto;
 }
 
 .page .act-table {
@@ -663,3 +642,85 @@ header nav ul li:hover a {
     -webkit-transform: translateZ(800px);
     -moz-transform: translateZ(800px)
 }
+@font-face {
+	font-family: "Exoct";
+	src: url("https://assets.codepen.io/1480814/films.EXH_____.ttf")
+  }
+  figure {
+	width: 100%;
+	aspect-ratio: 1;
+	margin: 0 0 60px;
+	padding: 5px 20px 0;
+	box-sizing: border-box;
+	display: grid;
+	grid-template-rows: 100%;
+	cursor: pointer;
+	position: relative;
+	filter: drop-shadow(0 0 20px rgb(0 0 0/50%));
+  }
+  figure:before {
+	content: "";
+	position: absolute;
+	z-index: -1;
+	inset: 0;
+	background: top/cover;
+	transform-origin: bottom;
+	filter: brightness(.9);
+	transition: .5s;
+  }
+  figure:before {
+	background-image: url(https://assets.codepen.io/1480814/necro-back.jpg)
+  }
+  figure + figure:before {
+	background-image: url(https://assets.codepen.io/1480814/druid-bac.jpg)
+  }
+  img {
+	grid-area: 1/1;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	object-position: top;
+	filter: contrast(.8) brightness(.7);
+	place-self: end center;
+	transition: .5s;
+  }
+  figcaption {
+	grid-area: 1/1;
+	width: calc(100% + 40px);
+	font-family: Exoct;
+	color: #fff;
+	font-size: min(32px,5vmin);
+	text-align: center;
+	place-self: end center;
+	transform: perspective(500px) translateY(100%) rotateX(-90deg);
+	backface-visibility: hidden;
+	transform-origin: top;
+	background: #000;
+	transition: .5s;
+  }
+  figure:hover img {
+	width: 130%;
+	height: 255%;
+	filter: contrast(1);
+  }
+  figure:hover::before {
+	filter: brightness(.3);
+	transform: perspective(500px) rotateX(60deg);
+  }
+  figure:hover figcaption{
+	transform: perspective(500px)translateY(100%) rotateX(-30deg);
+  }
+  
+  .figure_div {
+	margin: 0;
+	min-height: 100vh;
+	display: grid;
+	overflow: hidden;
+	grid-auto-flow: column;
+	grid-auto-columns: min(230px,35vmin);
+	place-content: end center;
+	gap: 50px;
+	background: 
+	  linear-gradient(#0000,rgb(50 50 50 / 88%)),
+	  url(https://assets.codepen.io/1480814/diablo-reaper-of-souls-mw-1360x768.jpg) top/cover;
+  }
