--- a/public/index.css
+++ b/public/index.css
@@ -724,3 +724,17 @@ header nav ul li:hover a {
 	  linear-gradient(#0000,rgb(50 50 50 / 88%)),
 	  url(https://assets.codepen.io/1480814/diablo-reaper-of-souls-mw-1360x768.jpg) top/cover;
   }
+  .overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent overlay */
+	z-index: 1; /* Lower z-index to ensure the maps are on top */
+  }
+  
+  .content {
+	position: relative; /* Ensure content div is positioned relative to its parent */
+	z-index: 2; /* Higher z-index to ensure it's above the overlay */
+  }
