--- a/public/style.css
+++ b/public/style.css
@@ -13,9 +13,9 @@ color: #4e5e72;
 font-family: monospace;
 padding-bottom: 6.74rem;
 }
-/*::-webkit-scrollbar {
-  width: 15px;
-}*/
+::-webkit-scrollbar {
+  width: 20px;
+}
 ::-webkit-scrollbar-track {
   background-color: rgba(0, 0, 0, 0.7);
   width: 20px;
