Fix some bugs and add information

--- a/public/artifacts.css
+++ b/public/artifacts.css
@@ -368,6 +368,7 @@ html, body {
   background-color: rgba(0, 0, 0, 0.8);
   opacity: 0;
   pointer-events: none;
+  z-index: 100;
 }
 
 .manta.show{
