--- a/public/index.css
+++ b/public/index.css
@@ -353,6 +353,7 @@ article:nth-child(5) .btn-lg {
 	}
 }
 
+
 ul {
     list-style: none;
     padding: 0;
@@ -410,9 +411,8 @@ a:active {
 header {
     position: fixed;
     top: 8px;
-	width: 50vw;
-	left: 25vw;
-    right: 25vw;
+    left: 0;
+    right: 0;
     z-index: 100;
     transition: 1s;
     -webkit-transition: 1s;
@@ -454,8 +454,7 @@ header nav ul li:hover a {
 
 .page {
     background-color: rgba(0, 0, 0, 0.2);
-	overflow-wrap: normal;
-	overflow: auto;
+	overflow-x: auto;
 }
 
 .page .act-table {
@@ -550,13 +549,6 @@ header nav ul li:hover a {
     transform: translateY(400px) rotateX(-90deg);
     -webkit-transform: translateY(400px) rotateX(-90deg);
     -moz-transform: translateY(400px) rotateX(-90deg)
-}
-
-.hidemap{
-	display: none;
-	pointer-events: none;
-	visibility: hidden;
-	position: absolute;
 }
 
 .face {
