--- a/public/index.css
+++ b/public/index.css
@@ -97,7 +97,8 @@ button.info-button:focus {
 	background-size: cover;
 	position: relative;
 	min-height: 100vh;
-	margin-bottom: 0;
+	margin-top: 0;
+	padding-top: 20px;
 }
 
 .jumbotron .overlay {
