--- a/public/style.css
+++ b/public/style.css
@@ -14,11 +14,18 @@ font-family: monospace;
 padding-bottom: 6.74rem;
 }
 ::-webkit-scrollbar {
+  position: absolute;
+  pointer-events: all;
+  z-index: 9999;
   width: 20px;
 }
 ::-webkit-scrollbar-track {
   background-color: rgba(0, 0, 0, 0.7);
   width: 20px;
+}
+::-webkit-scrollbar-button{
+  display: none;
+  visibility: hidden;
 }
 ::-webkit-scrollbar-thumb {
   background: linear-gradient(-45deg, red, blue, green,yellow);
@@ -39,9 +46,9 @@ padding-bottom: 6.74rem;
     background-position: 0% 50%;
   }
 }
-::-webkit-scrollbar-thumb:hover {
-  background-image: linear-gradient( 135deg, #43CBFF 10%, #9708CC 100%);
-}
+/* ::-webkit-scrollbar-thumb:hover {
+  /* background-image: linear-gradient( 135deg, #43CBFF 10%, #9708CC 100%); 
+} */
 h1 {
 font-size: 2rem;
 font-family: 'Dancing Script';
@@ -101,8 +108,8 @@ position:relative;
     position: fixed;
     top: 3rem;
     right: 3rem;
-    height: 3rem;
-    width: 3rem;
+    height: 30rem;
+    width: 30rem;
     border-radius: 50%;
     background: transparent;
     background-size: cover;
