--- a/public/index.css
+++ b/public/index.css
@@ -752,4 +752,10 @@ header nav ul li:hover a {
 	visibility: hidden;
 	pointer-events: none;
 }
-
+@media only screen and (max-width: 512px) {
+	body {
+  -webkit-overflow-scrolling: touch;
+  height: auto;
+  overflow: scroll;
+	}
+}
