--- a/public/index.css
+++ b/public/index.css
@@ -759,7 +759,7 @@ header nav ul li:hover a {
   overflow: scroll;
 	}
 }
-.message{
+#message{
 	text-align: center;
 	color: white;
 	font-size: medium;
